# City-of-Melbourne-Watt-the-Hack-Advanced-Track

./: .gitignore  LICENSE  README.md  pyproject.toml  strategy.py
.github/workflows/: publish.yml
examples/: local_agent_eval.py
notebooks/: playtester_local_eval.ipynb  training_starter.ipynb
runs/duck_curve_20260606T050735Z/: meta.json  metrics.json  report.html  steps.csv
tests/: __init__.py  test_engine.py  test_forecast.py  test_metrics.py  test_metrics_contract.py  test_runner.py
watt_the_hack/: __init__.py  constants.py  playtest.py
watt_the_hack/api/: __init__.py  sandbox.py  server.py
watt_the_hack/controllers/: __init__.py  parametric.py  rule_based.py
watt_the_hack/data_loaders/: aemo.py  scenarios.py
watt_the_hack/engine/: __init__.py  base_engine.py  engine.py
watt_the_hack/metrics/: __init__.py  metrics.py
watt_the_hack/scenarios/synthetic/: agentic_demo.json  duck_curve.json
watt_the_hack/simulation/: __init__.py  boot.py  runner.py  strategy.py
